--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.6.5",
-    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
-    "sass": "^1.68.0",
-    "scss": "^0.2.4",
+    "sass": "^1.69.0",
+    "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "20.8.3",
+    "@types/react": "18.2.25",
     "typescript": "5.2.2"
   }
 }
